Created some basic Data Transfer Objects (DTO) which will eventually be used by the Simulated Annealing functions.  Exposed Internal .Core access to .Core.UnitTests so we can be sure that non-public functions are working correctly.

--- a/TravelingSalesman.Core/TravelingSalesman.Core.fsproj
+++ b/TravelingSalesman.Core/TravelingSalesman.Core.fsproj
@@ -1,16 +1,17 @@
 ﻿<Project Sdk="FSharp.NET.Sdk;Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>netstandard1.6</TargetFramework>
   </PropertyGroup>
-
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <DebugType>full</DebugType>
+    <OtherFlags>--sig:Header.fsi</OtherFlags>
+  </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Library.fs" />
+    <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="DTO.fs" />
   </ItemGroup>
-
   <ItemGroup>
     <PackageReference Include="FSharp.Core" Version="4.1.*" />
     <PackageReference Include="FSharp.NET.Sdk" Version="1.0.*" PrivateAssets="All" />
   </ItemGroup>
-
 </Project>
