--- a/TravelingSalesman.Core.UnitTests/TravelingSalesman.Core.UnitTests.fsproj
+++ b/TravelingSalesman.Core.UnitTests/TravelingSalesman.Core.UnitTests.fsproj
@@ -4,7 +4,7 @@
     <TargetFramework>netcoreapp1.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="SimpleTest.fs" />
+    <Compile Include="DTOTest.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
