Created collection of functions used to calculate great circle distances using the Haversine Formula (1796).  Tests for the Haversine Formula are passing, ignoring insignificant rounding errors.

--- a/TravelingSalesman.Core.UnitTests/TravelingSalesman.Core.UnitTests.fsproj
+++ b/TravelingSalesman.Core.UnitTests/TravelingSalesman.Core.UnitTests.fsproj
@@ -18,6 +18,7 @@
   <ItemGroup>
     <Compile Include="DTOTest.fs" />
     <Compile Include="IOTest.fs" />
+    <Compile Include="HaversineFormulaTest.fs" />
     <Compile Include="Program.fs" />
     <EmbeddedResource Include="Example.gpx" />
   </ItemGroup>
