--- a/TravelingSalesman.Core/TravelingSalesman.Core.fsproj
+++ b/TravelingSalesman.Core/TravelingSalesman.Core.fsproj
@@ -12,6 +12,7 @@
     <Compile Include="DTO.fs" />
     <Compile Include="IO.fs" />
     <Compile Include="HaversineFormula.fs" />
+    <Compile Include="VincentyFormula.fs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="FSharp.Core" Version="4.1.*" />
