Safety check-in.  The Vincenty Formula works, but needs to be cleaned up.  Also, the function fails if both points are exactly on the equator.

--- a/TravelingSalesman.Core.UnitTests/TravelingSalesman.Core.UnitTests.fsproj
+++ b/TravelingSalesman.Core.UnitTests/TravelingSalesman.Core.UnitTests.fsproj
@@ -19,6 +19,7 @@
     <Compile Include="DTOTest.fs" />
     <Compile Include="IOTest.fs" />
     <Compile Include="HaversineFormulaTest.fs" />
+    <Compile Include="VincentyFormulaTest.fs" />
     <Compile Include="Program.fs" />
     <EmbeddedResource Include="Example.gpx" />
   </ItemGroup>
