Replaced .Core.DTO with .Core.Common. Refactored Vincenty error handling using railway-oriented programming and function composition.

--- a/TravelingSalesman.Core.UnitTests/TravelingSalesman.Core.UnitTests.fsproj
+++ b/TravelingSalesman.Core.UnitTests/TravelingSalesman.Core.UnitTests.fsproj
@@ -16,7 +16,7 @@
     <None Remove="Example.gpx" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DTOTest.fs" />
+    <Compile Include="CommonTest.fs" />
     <Compile Include="IOTest.fs" />
     <Compile Include="HaversineFormulaTest.fs" />
     <Compile Include="VincentyFormulaTest.fs" />
